--- a/src/MaiXIFY/Views/Home/Index.cshtml
+++ b/src/MaiXIFY/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <div id="divForSelectedPlaylists" style="display:none"></div>
     <div id="playlistForm" style="display:inline-block">
         <div id="playlistFormDiv" style="display:block">
-            Playlist URL:
+            Copy a playlist URL here:<br />
             <input id="playlistIdInput" type="text" name="playlistIdInput" size="200" value="">
             <button type="button" class="btn btn-sm btn-primary" onclick="getPlaylistByURL()">Get playlist</button>
             <br />
@@ -22,9 +22,9 @@
     </div>
     <hr>
     <div id="spotifyUserForm">
-        Spotify user name:
+         Or just give a Spotify user name:<br />
         <input id="spotifyUserInput" type="text" name="spotifyUserInput" size="100" value="">
-        <button type="button" class="btn btn-sm btn-primary" onclick="getPlaylists()">Get Playlists</button>
+        <button type="button" class="btn btn-sm btn-primary" onclick="getPlaylists()">Get user playlists</button>
         <br />
         <br />
     </div>
