--- a/src/MaiXIFY/Views/Home/Index.cshtml
+++ b/src/MaiXIFY/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <div id="divForSelectedPlaylists" style="display:none"></div>
     <div id="playlistForm" style="display:inline-block">
         <div id="playlistFormDiv" style="display:block">
-            Copy a playlist URL here:<br />
+            Copy a Spotify playlist URL here:<br />
             <input id="playlistIdInput" type="text" name="playlistIdInput" size="200" value="">
             <button type="button" class="btn btn-sm btn-primary" onclick="getPlaylistByURL()">Get playlist</button>
             <br />
