Comment added to Index.cshtml
Comment added to Index.cshtml

--- a/src/MaiXIFY/Views/Home/Index.cshtml
+++ b/src/MaiXIFY/Views/Home/Index.cshtml
@@ -110,6 +110,7 @@
             //var url = "/Home/GeneratePlaylist?selectedPlaylists=" + JSON.stringify(SelectedPlaylistElem) + "&" + "playlistName=" + playlistName + "&" + "isPublic=" + isPublic + "&" + "isCollaborative=" + isCollaborative;
             //window.location.href = url;
 
+            // Utoljára ezt próbálgattam:   
 
             var postData = { values: SelectedPlaylistElem };
 
