refresh token implementation + username at welcome page

--- a/src/MaiXIFY/Views/Home/Index.cshtml
+++ b/src/MaiXIFY/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 <h1 align="center"></h1>
 <h2>
-    Hey, welcome to MaiXIFY!<br /><br />
+    Hey @ViewData["userName"], welcome to MaiXIFY!<br /><br />
     Just select some Spotify playlist below, and enjoy your new mixed playlist!
 </h2>
 <br />
