threshold val fix + GenerateMaixifyPlaylist imprv.

--- a/src/MaiXIFY/Views/Home/Index.cshtml
+++ b/src/MaiXIFY/Views/Home/Index.cshtml
@@ -93,7 +93,7 @@
                 return;
             }
 
-            var thresholdValue = (document.getElementById('thresholdRange').value / 100).toString().replace(".", ",");
+            var thresholdValue = (document.getElementById('thresholdRange').value / 100).toString();
             var recommendedMusic = document.getElementById('isRecommendedMusicSet').checked;
 
             var e = document.getElementById("sortOptionDropdownList");
